@@ -1,6 +1,7 @@
 2010-04-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
-	* fspot.py (FSpotPhotoList): Code refactoring.
+	* fspot.py: Fixed total photo numbers with rating filter.
+	  Code refactoring.
 
 2010-04-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
